<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import
            alias="dm"
            type="com.childdddd.libdrawalemaker.DrawableMaker" />

        <import
            alias="c"
            type="com.childdddd.libdrawalemaker.utils.ColorStateListUtil" />

        <import type="com.remiel.drawablemaker.R" />

        <variable
            name="vm"
            type="com.remiel.drawablemaker.StateListDrawableViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv1"
            style="@style/text_style"
            bg_drawable="@{dm.stateDrawable().withSelected(@color/teal_200, @color/purple_200).make()}"
            bindSelected="@{vm.selected}"
            android:layout_marginTop="60dp"
            android:background="@color/white"
            android:text="@string/statelistdrawable_str1" />

        <TextView
            android:id="@+id/tv2"
            style="@style/text_style"
            bg_drawable="@{dm.stateDrawable().withSelected(R.drawable.shape_normal, R.drawable.shape_selected).make()}"
            bindSelected="@{vm.selected}"
            android:layout_marginTop="60dp"
            android:text="@string/statelistdrawable_str2" />

        <TextView
            android:id="@+id/tv3"
            style="@style/text_style"
            bg_drawable="@{dm.stateDrawable().withSelected(R.mipmap.image_normal, R.mipmap.image_selected).make()}"
            bindSelected="@{vm.selected}"
            android:layout_marginTop="30dp"
            android:text="@string/statelistdrawable_str3"

            />


        <TextView
            android:id="@+id/tv4"
            style="@style/text_style"
            bg_drawable="@{dm.stateDrawable().withSelected(R.mipmap.image_normal, R.mipmap.image_selected).make()}"
            bindSelected="@{vm.selected}"
            text_normalColor="@{@color/teal_200}"
            text_selectedColor="@{@color/purple_200}"
            android:layout_marginTop="30dp"
            android:text="@string/statelistdrawable_str4"
            />


        <TextView
            android:id="@+id/tv5"
            style="@style/text_style"
            bg_drawable="@{dm.stateDrawable().withEnabled(dm.drawable().withColor(@color/teal_200).make(), dm.drawable().withColor(@color/purple_200).make()).make()}"
            bindEnabled="@{vm.selected}"
            text_state2='@{c.textStateColor2(1, "#FFBB86FC", "#FF03DAC5")}'
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/statelistdrawable_str5" />

    </LinearLayout>
</layout>
